Uploaded by Bill.T.S' auto uploader.

--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@ a:hover{color: #fff;background-color: #049FDE;}
 <h2>Page Not Found</h2>
 
 <h3> </h3>
-<h3>It way be moved or deleted?</h3>
+<h3>It may be moved or deleted?</h3>
 
 <a href="/">Home Page</a>
 
